调整了theme的一些细节，尝试在装载svg图形时，按照theme样式对svg的颜色进行对应修改，这个功能目前没有实现

--- a/config/config.ini
+++ b/config/config.ini
@@ -33,95 +33,104 @@ CurrentTheme=default
 
 # === 基础颜色 ===
 # 窗口和背景色
-WindowMotionColor=150,150,150;60,60,60;120,140,160
-PrimaryContentBgColour=250,250,250;45,45,48;240,245,250
-DefaultBgColour=240,240,240;37,37,38;230,240,250
-SecondaryBackgroundColour=255,255,255;37,37,38;245,250,255
-MainBackgroundColour=250,250,250;45,45,48;240,245,250
+WindowMotionColor=150,150,150;80,80,80;120,140,160
+PrimaryContentBgColour=250,250,250;32,32,35;240,248,255
+DefaultBgColour=240,240,240;28,28,30;230,242,255
+SecondaryBackgroundColour=255,255,255;40,40,43;248,252,255
+MainBackgroundColour=250,250,250;32,32,35;240,248,255
 
 # 主题化的标准颜色
-ThemeWhiteColour=255,255,255;240,240,240;250,250,255
-ThemeBlackColour=0,0,0;220,220,220;40,40,60
-ThemeBlackPenColour=0,0,0;180,180,180;60,60,80
+ThemeWhiteColour=255,255,255;245,245,245;252,254,255
+ThemeBlackColour=0,0,0;230,230,230;30,30,50
+ThemeBlackPenColour=0,0,0;200,200,200;50,50,70
 
 # 边框和分隔线
-FrameBorderColor=0,200,200;80,80,80;0,150,200
-PrimaryFrameBorderColour=230,200,0;100,100,100;0,120,215
-DefaultBorderColour=170,170,170;85,85,85;150,180,210
-HighlightColour=0,120,215;0,122,204;0,120,215
+FrameBorderColor=0,200,200;100,100,100;0,150,200
+PrimaryFrameBorderColour=230,200,0;120,120,120;0,120,215
+DefaultBorderColour=170,170,170;90,90,90;140,170,200
+HighlightColour=0,120,215;64,156,255;0,120,215
 
 # === 文字颜色 ===
-DefaultTextColour=100,100,100;220,220,220;80,80,100
-MenuTextColour=0,0,0;220,220,220;40,60,80
-ErrorTextColour=255,0,0;244,71,71;200,50,50
-PlaceholderTextColour=128,128,128;140,140,140;120,140,160
+DefaultTextColour=100,100,100;240,240,240;70,70,90
+MenuTextColour=0,0,0;240,240,240;30,50,70
+ErrorTextColour=255,0,0;255,99,99;220,60,60
+PlaceholderTextColour=128,128,128;160,160,160;110,130,150
 
 # === FlatUIBar 颜色 ===
-BarBackgroundColour=240,240,240;45,45,48;235,240,250
-BarBorderColour=170,170,170;85,85,85;150,180,210
-ActBarBackgroundColour=255,255,255;37,37,38;245,250,255
-BarTabBorderColour=170,170,170;85,85,85;150,180,210
-BarActiveTabTopBorderColour=180,180,180;100,100,100;160,190,220
-BarActiveTabBgColour=255,255,255;37,37,38;245,250,255
-BarTabBorderTopColour=0,120,215;0,122,204;0,120,215
-BarActiveTextColour=100,100,100;220,220,220;80,80,100
-BarInactiveTextColour=70,70,70;170,170,170;100,120,140
+BarBackgroundColour=240,240,240;35,35,38;235,243,252
+BarBgColour=240,240,240;35,35,38;235,243,252
+BarBorderColour=170,170,170;90,90,90;140,170,200
+ActBarBackgroundColour=255,255,255;40,40,43;248,252,255
+BarTabBorderColour=170,170,170;90,90,90;140,170,200
+BarActiveTabTopBorderColour=180,180,180;110,110,110;150,180,210
+BarActiveTabBgColour=255,255,255;40,40,43;248,252,255
+BarTabBorderTopColour=0,120,215;64,156,255;0,120,215
+BarActiveTextColour=100,100,100;240,240,240;70,70,90
+BarInactiveTextColour=70,70,70;180,180,180;90,110,130
 
 # === 空间和悬停效果 ===
-HomespaceHoverBgColour=200,200,200;62,62,64;210,220,235
+HomespaceHoverBgColour=200,200,200;55,55,58;220,235,250
 
 # === 面板颜色 ===
-PanelBorderColour=200,200,200;85,85,85;170,190,210
-PanelHeaderColour=230,230,230;55,55,58;220,230,245
-PanelHeaderTextColour=100,100,100;220,220,220;80,80,100
-PanelSepatatorColor=200,200,200;85,85,85;170,190,210
+PanelBorderColour=200,200,200;90,90,90;170,190,210
+PanelHeaderColour=230,230,230;50,50,53;225,238,250
+PanelHeaderTextColour=70,70,70;220,220,220;70,70,90
+PanelSepatatorColor=200,200,200;90,90,90;170,190,210
 
 # === 主页菜单颜色 ===
-HomeMenuBorderColour=170,170,170;85,85,85;150,180,210
+HomeMenuBorderColour=170,170,170;90,90,90;140,170,200
 
 # === 按钮栏颜色 ===
-ButtonbarDefaultBgColour=255,255,255;45,45,48;245,250,255
-ButtonbarDefaultHoverBgColour=230,230,230;62,62,64;225,235,250
-ButtonbarDefaultPressedBgColour=220,220,220;85,85,85;200,220,240
-ButtonbarDefaultTextColour=100,100,100;220,220,220;80,80,100
-ButtonbarDefaultBorderColour=200,200,200;85,85,85;170,190,210
-ButtonbarPanelBgColour=230,230,230;55,55,58;220,230,245
-ButtonbarPanelBorderColour=200,200,200;85,85,85;170,190,210
-ButtonTextPlaceholderColour=120,120,120;160,160,160;130,150,170
+ButtonbarDefaultBgColour=255,255,255;32,32,35;248,252,255
+ButtonbarDefaultHoverBgColour=230,230,230;48,48,51;235,245,255
+ButtonbarDefaultPressedBgColour=220,220,220;60,60,63;220,235,250
+ButtonbarDefaultTextColour=100,100,100;240,240,240;70,70,90
+ButtonbarDefaultBorderColour=200,200,200;90,90,90;170,190,210
+ButtonbarPanelBgColour=230,230,230;50,50,53;225,238,250
+ButtonbarPanelBorderColour=200,200,200;90,90,90;170,190,210
+ButtonTextPlaceholderColour=120,120,120;170,170,170;120,140,160
 
 # === 系统按钮颜色 ===
-SystemButtonCloseHoverColour=232,17,35;196,43,28;200,50,70
-SystemButtonTextColour=0,0,0;220,220,220;40,60,80
+SystemButtonCloseHoverColour=232,17,35;255,99,99;220,60,80
+SystemButtonTextColour=0,0,0;240,240,240;30,50,70
 SystemButtonHoverTextColour=255,255,255;255,255,255;255,255,255
-SystemButtonBgColour=240,240,240;45,45,48;235,240,250
+SystemButtonBgColour=240,240,240;35,35,38;235,243,252
 
 # === Gallery 颜色 ===
-GalleryItemBgColour=250,250,250;45,45,48;240,245,250
-GalleryItemHoverBgColour=240,240,240;62,62,64;225,235,250
-GalleryItemSelectedBgColour=230,230,230;85,85,85;200,220,240
-GalleryItemBorderColour=200,200,200;85,85,85;170,190,210
-GalleryTextColour=120,120,120;180,180,180;100,120,140
+GalleryItemBgColour=250,250,250;32,32,35;240,248,255
+GalleryItemHoverBgColour=240,240,240;48,48,51;230,242,255
+GalleryItemSelectedBgColour=230,230,230;60,60,63;210,230,250
+GalleryItemBorderColour=200,200,200;90,90,90;170,190,210
+GalleryTextColour=120,120,120;200,200,200;90,110,130
 
 # === 浮动面板和特殊控件 ===
-FloatPanelShadowColour=255,255,255,100;0,0,0,150;200,220,240,120
-CustomControlBgColour=200,200,200;85,85,85;170,190,210
-BorderlessFramePenColour=100,100,100;150,150,150;120,140,160
+FloatPanelShadowColour=255,255,255,100;0,0,0,180;180,200,220,140
+CustomControlBgColour=200,200,200;90,90,90;170,190,210
+BorderlessFramePenColour=100,100,100;160,160,160;110,130,150
 
 # === 下拉控件颜色 ===
-DropdownBackgroundColour=255,255,255;45,45,48;245,250,255
-DropdownBorderColour=170,170,170;85,85,85;150,180,210
-DropdownHoverColour=230,230,230;62,62,64;225,235,250
-DropdownSelectionBgColour=0,120,215;0,122,204;0,120,215
+DropdownBackgroundColour=255,255,255;32,32,35;248,252,255
+DropdownBorderColour=170,170,170;90,90,90;140,170,200
+DropdownHoverColour=230,230,230;48,48,51;235,245,255
+DropdownSelectionBgColour=0,120,215;64,156,255;0,120,215
 DropdownSelectionTextColour=255,255,255;255,255,255;255,255,255
 
 # === 框架和面板背景 ===
-FrameAppWorkspaceColour=240,240,240;30,30,30;230,240,250
-SvgPanelBgColour=245,245,245;45,45,48;235,245,255
-ScrolledWindowBgColour=255,255,255;37,37,38;245,250,255
-IconPanelBgColour=255,255,255;37,37,38;245,250,255
-ErrorBackgroundColour=255,255,255;50,45,45;255,245,245
-WarningBackgroundColour=245,245,245;55,50,45;250,248,240
-MenuBackgroundColour=255,255,255;45,45,48;245,250,255
+FrameAppWorkspaceColour=240,240,240;25,25,28;230,242,255
+SvgPanelBgColour=245,245,245;32,32,35;238,246,255
+ScrolledWindowBgColour=255,255,255;40,40,43;248,252,255
+IconPanelBgColour=255,255,255;40,40,43;248,252,255
+ErrorBackgroundColour=255,255,255;60,45,45;255,248,248
+WarningBackgroundColour=245,245,245;65,55,45;255,252,245
+MenuBackgroundColour=255,255,255;32,32,35;248,252,255
+
+# === 文本框和搜索框颜色 ===
+TextCtrlBgColour=255,255,255;28,28,30;248,252,255
+TextCtrlFgColour=0,0,0;240,240,240;30,30,50
+TextCtrlBorderColour=170,170,170;90,90,90;140,170,200
+SearchCtrlBgColour=255,255,255;35,35,38;248,252,255
+SearchCtrlFgColour=0,0,0;240,240,240;30,30,50
+SearchPanelBgColour=240,240,240;35,35,38;235,243,252
 
 # ====================================================================
 # SVG 主题配置
@@ -130,10 +139,10 @@ MenuBackgroundColour=255,255,255;45,45,48;245,250,255
 SvgThemeEnabled=true
 
 # SVG 图标颜色 (格式同上: default,dark,blue)
-SvgPrimaryIconColour=100,100,100;220,220,220;80,80,100
-SvgSecondaryIconColour=70,70,70;170,170,170;100,120,140
-SvgDisabledIconColour=180,180,180;120,120,120;160,170,180
-SvgHighlightIconColour=0,120,215;0,122,204;0,120,215
+SvgPrimaryIconColour=100,100,100;240,240,240;70,70,90
+SvgSecondaryIconColour=70,70,70;180,180,180;90,110,130
+SvgDisabledIconColour=180,180,180;120,120,120;150,160,170
+SvgHighlightIconColour=0,120,215;64,156,255;0,120,215
 
 # ====================================================================
 # 字体设置
