清理了log，调整了对缺少<g>元素的svg替换颜色的处理，调整了一些主题样式的细节

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,6 @@ FodyWeavers.xsd
 /build/wxapp.vcxproj
 /build/wxapp.vcxproj.filters
 /config/final_review_gate.py
+/config/icons/svg/test_svg_regex.py
+/config/test_svg_regex.py
+/src/.vscode/tasks.json
