--- a/config/config.ini
+++ b/config/config.ini
@@ -23,125 +23,144 @@ MainFrameSize=1200,700
 # 主题设置 - 可选值: default, dark, blue
 # ====================================================================
 [Theme]
-CurrentTheme=default
+CurrentTheme=dark
 
 # ====================================================================
-# 主题配置 - 所有颜色值都会根据当前主题自动调整
+# 主题配置 - 简化为5色配色方案
 # 格式: ConfigKey=default_value,dark_value,blue_value
 # ====================================================================
 [ThemeColors]
 
-# === 基础颜色 ===
-# 窗口和背景色
-WindowMotionColor=150,150,150;80,80,80;120,140,160
-PrimaryContentBgColour=250,250,250;32,32,35;240,248,255
-DefaultBgColour=240,240,240;28,28,30;230,242,255
+# === 核心5色配色方案 ===
+# 1. 主背景色
+PrimaryBackgroundColour=250,250,250;32,32,35;240,248,255
+# 2. 次要背景色  
 SecondaryBackgroundColour=255,255,255;40,40,43;248,252,255
+# 3. 主文字色
+PrimaryTextColour=100,100,100;240,240,240;70,70,90
+# 4. 边框/分隔线色
+BorderColour=170,170,170;90,90,90;140,170,200
+# 5. 高亮/强调色
+AccentColour=0,120,215;64,156,255;0,120,215
+
+# === 基于核心色的衍生配色 ===
+# 背景色系 (基于主背景色和次要背景色)
+DefaultBgColour=250,250,250;32,32,35;240,248,255
 MainBackgroundColour=250,250,250;32,32,35;240,248,255
+PrimaryContentBgColour=250,250,250;32,32,35;240,248,255
+FrameAppWorkspaceColour=250,250,250;32,32,35;240,248,255
+MenuBackgroundColour=255,255,255;32,32,35;248,252,255
+TextCtrlBgColour=255,255,255;28,28,30;248,252,255
+SearchCtrlBgColour=255,255,255;35,35,38;248,252,255
 
-# 主题化的标准颜色
-ThemeWhiteColour=255,255,255;245,245,245;252,254,255
-ThemeBlackColour=0,0,0;230,230,230;30,30,50
-ThemeBlackPenColour=0,0,0;200,200,200;50,50,70
-
-# 边框和分隔线
-FrameBorderColor=0,200,200;100,100,100;0,150,200
-PrimaryFrameBorderColour=230,200,0;120,120,120;0,120,215
-DefaultBorderColour=170,170,170;90,90,90;140,170,200
-HighlightColour=0,120,215;64,156,255;0,120,215
-
-# === 文字颜色 ===
+# 文字色系 (基于主文字色)
 DefaultTextColour=100,100,100;240,240,240;70,70,90
-MenuTextColour=0,0,0;240,240,240;30,50,70
-ErrorTextColour=255,0,0;255,99,99;220,60,60
+MenuTextColour=100,100,100;240,240,240;70,70,90
+TextCtrlFgColour=100,100,100;240,240,240;70,70,90
+SearchCtrlFgColour=100,100,100;240,240,240;70,70,90
+SystemButtonTextColour=100,100,100;240,240,240;70,70,90
 PlaceholderTextColour=128,128,128;160,160,160;110,130,150
 
-# === FlatUIBar 颜色 ===
-BarBackgroundColour=240,240,240;35,35,38;235,243,252
-BarBgColour=240,240,240;35,35,38;235,243,252
+# 边框色系 (基于边框色)
+DefaultBorderColour=170,170,170;90,90,90;140,170,200
+FrameBorderColor=170,170,170;90,90,90;140,170,200
+PrimaryFrameBorderColour=170,170,170;90,90,90;140,170,200
+TextCtrlBorderColour=170,170,170;90,90,90;140,170,200
+PanelBorderColour=170,170,170;90,90,90;140,170,200
+PanelSepatatorColor=170,170,170;90,90,90;140,170,200
+
+# 强调色系 (基于强调色)
+HighlightColour=0,120,215;64,156,255;0,120,215
+DropdownSelectionBgColour=0,120,215;64,156,255;0,120,215
+
+# === FlatUIBar 配色 ===
+BarBackgroundColour=250,250,250;32,32,35;240,248,255
+BarBgColour=250,250,250;32,32,35;240,248,255
 BarBorderColour=170,170,170;90,90,90;140,170,200
-ActBarBackgroundColour=255,255,255;40,40,43;248,252,255
-BarTabBorderColour=170,170,170;90,90,90;140,170,200
-BarActiveTabTopBorderColour=180,180,180;110,110,110;150,180,210
+ActBarBackgroundColour=250,250,250;32,32,35;240,248,255
 BarActiveTabBgColour=255,255,255;40,40,43;248,252,255
-BarTabBorderTopColour=0,120,215;64,156,255;0,120,215
 BarActiveTextColour=100,100,100;240,240,240;70,70,90
 BarInactiveTextColour=70,70,70;180,180,180;90,110,130
 
-# === 空间和悬停效果 ===
-HomespaceHoverBgColour=200,200,200;55,55,58;220,235,250
-
-# === 面板颜色 ===
-PanelBorderColour=200,200,200;90,90,90;170,190,210
-PanelHeaderColour=230,230,230;50,50,53;225,238,250
-PanelHeaderTextColour=70,70,70;220,220,220;70,70,90
-PanelSepatatorColor=200,200,200;90,90,90;170,190,210
-
-# === 主页菜单颜色 ===
-HomeMenuBorderColour=170,170,170;90,90,90;140,170,200
-
-# === 按钮栏颜色 ===
-ButtonbarDefaultBgColour=255,255,255;32,32,35;248,252,255
-ButtonbarDefaultHoverBgColour=230,230,230;48,48,51;235,245,255
-ButtonbarDefaultPressedBgColour=220,220,220;60,60,63;220,235,250
+# === 按钮和控件配色 ===
+ButtonbarDefaultBgColour=250,250,250;32,32,35;240,248,255
+ButtonbarDefaultHoverBgColour=240,240,240;40,40,43;230,242,255
+ButtonbarDefaultPressedBgColour=230,230,230;48,48,51;220,235,250
 ButtonbarDefaultTextColour=100,100,100;240,240,240;70,70,90
-ButtonbarDefaultBorderColour=200,200,200;90,90,90;170,190,210
-ButtonbarPanelBgColour=230,230,230;50,50,53;225,238,250
-ButtonbarPanelBorderColour=200,200,200;90,90,90;170,190,210
-ButtonTextPlaceholderColour=120,120,120;170,170,170;120,140,160
+ButtonbarDefaultBorderColour=170,170,170;90,90,90;140,170,200
+SystemButtonBgColour=250,250,250;32,32,35;240,248,255
 
-# === 系统按钮颜色 ===
+# === 面板配色 ===
+PanelHeaderColour=250,250,250;32,32,35;240,248,255
+PanelHeaderTextColour=100,100,100;240,240,240;70,70,90
+
+# === 特殊状态配色 ===
+ErrorTextColour=255,0,0;255,99,99;220,60,60
 SystemButtonCloseHoverColour=232,17,35;255,99,99;220,60,80
-SystemButtonTextColour=0,0,0;240,240,240;30,50,70
 SystemButtonHoverTextColour=255,255,255;255,255,255;255,255,255
-SystemButtonBgColour=240,240,240;35,35,38;235,243,252
+DropdownSelectionTextColour=255,255,255;255,255,255;255,255,255
 
-# === Gallery 颜色 ===
+# === 兼容性保留配色 ===
+WindowMotionColor=150,150,150;80,80,80;120,140,160
+ThemeWhiteColour=255,255,255;245,245,245;252,254,255
+ThemeBlackColour=0,0,0;230,230,230;30,30,50
+ThemeBlackPenColour=0,0,0;200,200,200;50,50,70
+HomespaceHoverBgColour=200,200,200;55,55,58;220,235,250
+HomeMenuBorderColour=170,170,170;90,90,90;140,170,200
+PinButtonBgColour=250,250,250;32,32,35;240,248,255
+UnpinButtonBgColour=250,250,250;32,32,35;240,248,255
 GalleryItemBgColour=250,250,250;32,32,35;240,248,255
 GalleryItemHoverBgColour=240,240,240;48,48,51;230,242,255
 GalleryItemSelectedBgColour=230,230,230;60,60,63;210,230,250
-GalleryItemBorderColour=200,200,200;90,90,90;170,190,210
+GalleryItemBorderColour=170,170,170;90,90,90;140,170,200
 GalleryTextColour=120,120,120;200,200,200;90,110,130
-
-# === 浮动面板和特殊控件 ===
 FloatPanelShadowColour=255,255,255,100;0,0,0,180;180,200,220,140
-CustomControlBgColour=200,200,200;90,90,90;170,190,210
+CustomControlBgColour=170,170,170;90,90,90;140,170,200
 BorderlessFramePenColour=100,100,100;160,160,160;110,130,150
-
-# === 下拉控件颜色 ===
 DropdownBackgroundColour=255,255,255;32,32,35;248,252,255
 DropdownBorderColour=170,170,170;90,90,90;140,170,200
 DropdownHoverColour=230,230,230;48,48,51;235,245,255
-DropdownSelectionBgColour=0,120,215;64,156,255;0,120,215
-DropdownSelectionTextColour=255,255,255;255,255,255;255,255,255
-
-# === 框架和面板背景 ===
-FrameAppWorkspaceColour=240,240,240;25,25,28;230,242,255
-SvgPanelBgColour=245,245,245;32,32,35;238,246,255
-ScrolledWindowBgColour=255,255,255;40,40,43;248,252,255
-IconPanelBgColour=255,255,255;40,40,43;248,252,255
+SvgPanelBgColour=250,250,250;32,32,35;240,248,255
+ScrolledWindowBgColour=250,250,250;32,32,35;240,248,255
+IconPanelBgColour=250,250,250;32,32,35;240,248,255
 ErrorBackgroundColour=255,255,255;60,45,45;255,248,248
 WarningBackgroundColour=245,245,245;65,55,45;255,252,245
-MenuBackgroundColour=255,255,255;32,32,35;248,252,255
+ButtonbarPanelBgColour=250,250,250;32,32,35;240,248,255
+ButtonbarPanelBorderColour=170,170,170;90,90,90;140,170,200
+ButtonTextPlaceholderColour=120,120,120;170,170,170;120,140,160
+SearchPanelBgColour=250,250,250;32,32,35;240,248,255
 
-# === 文本框和搜索框颜色 ===
-TextCtrlBgColour=255,255,255;28,28,30;248,252,255
-TextCtrlFgColour=0,0,0;240,240,240;30,30,50
-TextCtrlBorderColour=170,170,170;90,90,90;140,170,200
-SearchCtrlBgColour=255,255,255;35,35,38;248,252,255
-SearchCtrlFgColour=0,0,0;240,240,240;30,30,50
-SearchPanelBgColour=240,240,240;35,35,38;235,243,252
+# === 滚动条颜色配置 ===
+ScrollBarBgColour=250,250,250;32,32,35;240,248,255
+ScrollBarThumbColour=200,200,200;70,70,70;180,200,220
+ScrollBarThumbHoverColour=180,180,180;90,90,90;160,180,200
+ScrollBarThumbPressedColour=160,160,160;110,110,110;140,160,180
+ScrollBarArrowColour=100,100,100;240,240,240;70,70,90
+ScrollBarArrowBgColour=230,230,230;50,50,53;220,235,250
+
+# === Frame 和消息面板颜色 ===
+MessagePanelBgColour=250,250,250;32,32,35;240,248,255
+SplitterSashColour=170,170,170;90,90,90;140,170,200
+SplitterBorderColour=170,170,170;90,90,90;140,170,200
+
+BarTabBorderColour=170,170,170;90,90,90;140,170,200
+BarActiveTabTopBorderColour=180,180,180;110,110,110;150,180,210
+BarTabBorderTopColour=0,120,215;64,156,255;0,120,215
 
 # ====================================================================
-# SVG 主题配置
+# SVG 主题配置 - 基于5色配色方案
 # ====================================================================
 [SvgTheme]
 SvgThemeEnabled=true
 
-# SVG 图标颜色 (格式同上: default,dark,blue)
+# SVG 图标颜色 (基于核心5色方案)
+# 主要图标颜色 - 使用主文字色
 SvgPrimaryIconColour=100,100,100;240,240,240;70,70,90
-SvgSecondaryIconColour=70,70,70;180,180,180;90,110,130
-SvgDisabledIconColour=180,180,180;120,120,120;150,160,170
+# 次要图标颜色 - 使用稍淡的文字色
+SvgSecondaryIconColour=128,128,128;180,180,180;90,110,130
+# 禁用图标颜色 - 使用边框色
+SvgDisabledIconColour=170,170,170;90,90,90;140,170,200
+# 高亮图标颜色 - 使用强调色
 SvgHighlightIconColour=0,120,215;64,156,255;0,120,215
 
 # ====================================================================
@@ -155,19 +174,27 @@ DefaultFontWeight=wxFONTWEIGHT_NORMAL
 DefaultFontFaceName=Consolas
 
 # ====================================================================
-# 尺寸和间距配置 (这些值通常不随主题变化)
+# 尺寸和间距配置 - 统一的间距设计系统
 # ====================================================================
+
+# === 统一间距标准 ===
+# 基础间距单位: 2px, 4px, 8px, 12px, 16px
+# 小间距: 2px (紧密排列)
+# 标准间距: 4px (常规控件间距)  
+# 中等间距: 8px (组件组间距)
+# 大间距: 12px (区域间距)
+# 特大间距: 16px (主要区域间距)
 
 # === FlatUIBar 尺寸 ===
 [BarSizes]
-BarTopMargin=2
+BarTopMargin=4
 BarBottomMargin=0
 BarRenderHeight=30
 BarUnpinnedHeight=35
-BarTabPadding=10
+BarTabPadding=8
 BarTabSpacing=0
-BarElementSpacing=0
-BarPadding=0
+BarElementSpacing=4
+BarPadding=4
 BarTabBorderTop=2
 TabTopSpacing=4
 TabsScrollButtonWidth=20
@@ -177,11 +204,11 @@ SpaceDefaulWidth=100
 [ButtonBarSizes]
 ButtonbarTargetHeight=28
 ButtonbarIconSize=16
-ButtonbarHorizontalPadding=2
-ButtonbarInternalVerticalPadding=3
-ButtonbarSpacing=0
-ButtonbarBarHorizontalMargin=4
-ButtonbarVerticalMargin=2
+ButtonbarHorizontalPadding=4
+ButtonbarInternalVerticalPadding=4
+ButtonbarSpacing=2
+ButtonbarBarHorizontalMargin=8
+ButtonbarVerticalMargin=4
 ButtonbarDefaultBorderWidth=0
 ButtonbarDefaultCornerRadius=0
 ButtonbarMenuVerticalOffset=2
@@ -191,48 +218,63 @@ ButtonbarDropdownArrowHeight=3
 # === 分隔符配置 ===
 [Separators]
 ButtonbarSeparatorWidth=1
-ButtonbarSeparatorPadding=2
-ButtonbarSeparatorMargin=2
+ButtonbarSeparatorPadding=4
+ButtonbarSeparatorMargin=4
 PanelSepatatorWidth=1
 
 # === 图标配置 ===
 [Icons]
-IconTextBelowSpacing=1
-IconTextBelowTopMargin=2
+IconTextBelowSpacing=2
+IconTextBelowTopMargin=4
 
 # === Gallery 尺寸 ===
 [GallerySizes]
 GalleryTargetHeight=28
-GalleryItemSpacing=2
-GalleryItemPadding=2
-GalleryHorizontalMargin=2
-GalleryVerticalMargin=2
-GalleryInternalVerticalPadding=2
+GalleryItemSpacing=4
+GalleryItemPadding=4
+GalleryHorizontalMargin=4
+GalleryVerticalMargin=4
+GalleryInternalVerticalPadding=4
 
 # === 面板尺寸和边距 ===
 [PanelSizes]
-PanelInternalVerticalPadding=2
-PanelInternalHorizontalPadding=2
-PanelInternalPaddingTotal=2
+PanelInternalVerticalPadding=4
+PanelInternalHorizontalPadding=4
+PanelInternalPaddingTotal=4
 PanelTargetHeight=50
 PanelCollapsedHeight=16
 PanelDefaultHeaderAreaSize=16
-InnerbarBorderSpacing=2
-PanelMargin=4
-PanelPadding=4
-PageMargin=4
-PagePadding=4
+InnerbarBorderSpacing=4
+PanelMargin=8
+PanelPadding=8
+PageMargin=8
+PagePadding=8
+
+# === Frame 和容器间距 ===
+[FrameSizes]
+FrameMainSizerMargin=4
+SplitterPaneMargin=8
+MessagePanelMargin=0
+MessagePanelPadding=0
+SvgPanelMargin=8
+SvgScrollMargin=8
+
+# === 滚动条配置 ===
+[ScrollBar]
+ScrollRate=5
+ScrollBarWidth=16
+ScrollBarButtonSize=16
 
 # === 主页空间 ===
 [HomeSpace]
 SystemButtonWidth=40
 SystemButtonHeight=30
-SystemButtonSpacing=0
+SystemButtonSpacing=2
 
 # === 主页菜单 ===
 [HomeMenu]
 HomeMenuItemHeight=25
-HomeMenuSeparatorHeight=5
+HomeMenuSeparatorHeight=8
 HomeMenuWidth=240
 
 # ====================================================================
